TestSuite/errors/err0524_res_unit.pas
//!Файл 'non_existing_file' не найден
unit err0524_res_unit;

{$resource non_existing_file}

end.